pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: redis-with-proxy
  name: redis-with-proxy
  namespace: db
spec:
  containers:
  - args:
    - client
    image: redis
    name: redis-with-proxy
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
